--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,8 +35,14 @@ picture {
 
 button,
 a {
+  margin: 0;
+  padding: 0;
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  background-color: inherit;
+  border: none;
+  text-transform: lowercase;
+  cursor: pointer;
 }
