--- a/styles/light.css
+++ b/styles/light.css
@@ -4,9 +4,39 @@
   переключая тему
 */
 
+
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #FF8DCB;
+  --main-text-color: #353430;
+  background-color: #FFF1F7;
 }
+
+.page.theme_light .header {
+  background-image: url(/images/cover-image-light.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.page.theme_light .header-decorated-text  {
+  display: none;
+}
+
+.page.theme_light .header__theme-menu-button {
+  color: var(--main-text-color, #353430);
+}
+
+.page.theme_light .header__theme-menu-button_active {
+  outline: 1px solid var(--main-text-color, #353430);
+}
+
+.page.theme_light .header__title {
+  color: #FFC2E6;
+}
+
+
+
