--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,12 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --accent-color: #ff0070;
+  --main-text-color: #F1B2CE;
+  --title-text-color: #000028;
+  --main-font: 'IBM Plex Mono';
+  --main-font-size: 18px;
+  --background-color: #000028;
+  --content-padding: 20px;
+}
