--- a/styles/light.css
+++ b/styles/light.css
@@ -10,13 +10,31 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  background-image: url(/images/cover-image-light.png);
+  background-image: url(../images/cover-image-light.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   --accent-color: #FF8DCB;
   --main-text-color: #353430;
   background-color: #FFF1F7;
+}
+
+.page.theme_light .header__theme-menu-button:focus {
+  outline: none;
+}
+
+.page.theme_light .header__theme-menu-button:focus-visible {
+  border-bottom: 1px var(--main-text-color, #353430) solid;
+}
+
+.page.theme_light .corner-decore-right-up {
+  border-top: 1px solid var(--main-text-color, #353430);
+  border-right: 1px solid var(--main-text-color, #353430);
+}
+
+.page.theme_light .corner-decore-left-down {
+  border-bottom: 1px solid var(--main-text-color, #353430);
+  border-left: 1px solid var(--main-text-color, #353430);
 }
 
 .page.theme_light .header-decorated-text  {
