--- a/styles/style.css
+++ b/styles/style.css
@@ -6,28 +6,30 @@
   position: relative;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 299px 130px 299px;
+  grid-template-rows: 1fr auto 1fr;
+  height: 100vh;
   padding: var(--content-padding, 20px);
+  min-block-size: 668px;
 }
 
-.header::after {
-  content: '';
+.corner-decore {
   position: absolute;
-  top: var(--content-padding, 20px);
-  right: var(--content-padding, 20px);
   width: 25px;
   height: 25px;
+
+}
+
+.corner-decore-right-up {
+  top: var(--content-padding, 20px);
+  right: var(--content-padding, 20px);
   border-top: 1px solid var(--accent-color, #ff0070);
   border-right: 1px solid var(--accent-color, #ff0070);
 }
 
-.header::before {
-  content: '';
-  position: absolute;
+.corner-decore-left-down {
+  
   bottom:  var(--content-padding, 20px);
   left:  var(--content-padding, 20px);
-  width: 25px;
-  height: 25px;
   border-bottom: 1px solid var(--accent-color, #ff0070);
   border-left: 1px solid var(--accent-color, #ff0070);
 }
@@ -37,8 +39,9 @@
   top: 20px;
   right: 48px;;
   color: var(--accent-color, #ff0070);
-  font-family: var(--main-font);
+  font-family: var(--main-font, Arial, sans-serif);
   line-height: 139%;
+  text-transform: uppercase;
 }
 
 .header-decorated-text::after {
@@ -69,13 +72,25 @@
   box-sizing: border-box;
   padding: 1.5px 13px;
   color: var(--accent-color, red);
-  font-family: var(--main-font, sans-serif);
+  font-family: var(--main-font, Arial, sans-serif);
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid currentColor;
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px currentColor solid;
 }
 
 .header__title {
   margin-inline-start: -20px;
   color: #db00ff;
-  font-family: var(--main-font, sans-serif);
+  font-family: var(--main-font, Arial, sans-serif);
   font-weight: 700;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 83%;
@@ -86,7 +101,7 @@
   justify-self: end;
   align-self: center;
   color: #000028;
-  font-family: var(--main-font, sans-serif);
+  font-family: var(--main-font, Arial, sans-serif);
   font-weight: 700;
   line-height: 130%;
   max-inline-size: 491px;
@@ -109,153 +124,200 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   color: var(--main-text-color);
-  font-family: var(--main-font);
+  font-family: var(--main-font, Arial, sans-serif);
   font-size: var(--main-font-size, 18px);
   background-color: var(--background-color, #000028);
-  background-image: url(/images/cover-image-dark.png);
+  background-image: url(../images/cover-image-dark.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
   max-inline-size: 1024px;
+  margin: 0 auto;
 }
 
 .main-content {
-  padding: 0 var(--content-padding);
   display: flex;
   flex-direction: column;
   gap: 80px;
   margin-block-start: 60px;
+  padding: 0 var(--content-padding);
 }
 
-.two-columns-section {
+.content-cards {
   display: grid;
-  grid-template-columns: 31% 66%;
-  grid-template-rows: 50% 50%;
-  gap: 20px 30px;
+  gap: 20px;
   max-inline-size: 1024px;
+  /* 472px ??? */
 }
 
-.two-columns-section .heading {
-  grid-row-start: 2 span;
+.two-columns {
+  grid-template-columns: 32% 66%;
 }
 
-.heading{
+.three-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.three-columns-header {
+  max-inline-size: 315px;
+
+}
+
+.content-cards__container {
+  display: grid;
+  gap: 20px;
+}
+
+.heading {
   color: var(--title-text-color);
-  font-family: var(--main-font);
+  font-family: var(--main-font, Arial, sans-serif);
   font-weight: 700;
-  line-height: 130%;
   font-size: var(--main-font-size, 18px);
+  line-height: 130%;
 }
 
 .heading-accent-color {
   color: var(--accent-color);
 }
 
+.heading-weight-regular {
+  font-weight: 400;
+}
+
 .content-card__text {
   margin-block-start: 10px;
+  line-height: 130%;
 }
 
 .text-link {
+  display: inline-block;
   text-shadow: 2px 2px 0 var(--accent-color);
 }
 
-.three-columns-section {
+.text-link:hover {
+  box-sizing: border-box;
+  border-bottom: 1px currentColor solid;
+  margin-bottom: -1px;
+  max-width: min-content;
+}
+
+.text-link:focus {
+  outline: none;
+}
+
+.text-link:focus-visible {
+  outline: 1px currentColor solid;
+}
+
+.gallery {
+  margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 47px auto;
   gap: 20px;
 }
 
-.three-columns-section .heading {
-  grid-column-start: 3 span;
-  max-inline-size: 315px;
-}
-
-.section-six-rows {
+.gallery__container {
   display: grid;
-  grid-template-columns: 315px auto;
-  grid-template-rows: repeat(6, auto);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
   gap: 20px;
 }
 
-.section-six-rows .heading-accent-color {
-  grid-row-start: 1;
-  grid-row-end: 7;
+.grid-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.gallery-content {
-  display: grid;
-  grid-template-areas:
-  "item-1 item-1 item-2"
-  "item-3 item-4 item-2";
+.img1 {
+  grid-column: 1 / 3;
+  grid-row: 1;
 }
 
-.img-item-1 {
-  grid-area: item-1;
+.img2 {
+  grid-column: 3;
+  grid-row: 1 / span 2;
 }
 
-.img-item-2 {
-  grid-area: item-2;
+.img3 {
+  grid-column: 1;
+  grid-row: 2 / 4;
 }
 
-.img-item-3 {
-  grid-area: item-3;
+.img4 {
+  grid-column: 2;
+  grid-row: 2;
 }
 
-.img-item-4 {
-  grid-area: item-4;
-}
-
-.img-item-5 {
-  grid-area: item-5;
+.img5 {
+  grid-column: 2 / 4;
+  grid-row: 3; 
 }
 
 /* End Main */
 
 
+.footer {
+  position: relative;
+  margin-block-start: 60px;
+  text-align: center;
+  padding: 319px 0;
+  color: #db00ff;
+  font-family: var(--main-font, Arial, sans-serif);
+  font-weight: 700;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 83%;
+  text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
+}
+
 /* Media */
 @media (max-width: 768px)
 {
 
-  .header {
-    grid-template-rows: 443px 99px 443px;
-  }
-
   .header__theme-menu {
     justify-self: end;
     align-self: center;
+    max-block-size: 96px;
+    block-size: 96px;
   }
 
   .header__theme-menu-list {
     flex-direction: column;
-    margin-block-start: -38px;
   }
 
   .header__text-block {
     max-inline-size: 364px;
+    min-block-size: 117px;
   }
 
-  .three-columns-section {
-    display: flex;
-    flex-direction: column;
-    
+  .three-columns {
+    grid-template-columns: 1fr;
   }
-  
-  .three-columns-section .heading-accent-color {
+
+  .three-columns-header {
     max-inline-size: 236px;
   }
 
-  .three-columns-section .content-card .heading {
+  .two-columns .content-card__text {
+    max-inline-size: 472px;
+  }
+}
+
+@media (max-width: 565px) {
+  .main-content {
+    margin-block-start: 40px;
+  }
+  .two-columns {
+    grid-template-columns: 1fr;
+  }
+
+  .content-cards__container {
     max-inline-size: 100%;
   }
 
-  .section-six-rows {
-    grid-template-columns: 35% 60%;
+  .footer {
+    padding: 463px 0;
   }
-
-  
- 
 }
 
 @media (max-width: 375px)
@@ -264,12 +326,9 @@
     --content-padding: 10px;
   }
 
-  .header {
-    grid-template-rows: 228px 192px 228px;
-  }
-
   .header__title {
     margin-inline-start: 0px;
+    font-size: 116px;
   }
 
   .header-decorated-text {
@@ -282,14 +341,67 @@
     right: -20px;
   }
 
-  .two-columns-section {
-    display: flex;
-    flex-direction: column;
+  .header__text-block {
+    max-inline-size: 355px;
+    justify-self: flex-start;
   }
 
-  .section-six-rows {
-    display: flex;
-    flex-direction: column;
+  .main-content {
+    gap: 50px;
+  }
+
+  .three-columns-header {
+    max-inline-size: 100%;
+  }
+
+  .gallery {
+    gap: 10px;
   }
   
+  .gallery__container {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    gap: 10px;
+  }
+  
+  .grid-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .img1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+  
+  .img2 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+  
+  .img3 {
+    grid-column: 1 / 2;
+    grid-row: 3/ 4;
+  }
+  
+  .img4 {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+  }
+  
+  .img5 {
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+  }
+
+  .footer {
+    padding: 286px 0;
+  }
+
+
+
 }
+
+
+
