--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,7 +6,7 @@
   --accent-color: #ff0070;
   --main-text-color: #F1B2CE;
   --title-text-color: #000028;
-  --main-font: 'IBM Plex Mono';
+  --main-font: 'IBM Plex Mono', Arial sans-serif;
   --main-font-size: 18px;
   --background-color: #000028;
   --content-padding: 20px;
