--- a/styles/style.css
+++ b/styles/style.css
@@ -1,367 +1,238 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 /* Header Start */
-
-.header {
-  position: relative;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr auto 1fr;
-  height: 100vh;
-  padding: var(--content-padding, 20px);
-  min-block-size: 668px;
-}
-
-.corner-decore {
-  position: absolute;
-  width: 25px;
-  height: 25px;
-
-}
-
-.corner-decore-right-up {
-  top: var(--content-padding, 20px);
-  right: var(--content-padding, 20px);
-  border-top: 1px solid var(--accent-color, #ff0070);
-  border-right: 1px solid var(--accent-color, #ff0070);
-}
-
-.corner-decore-left-down {
+  .header {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto 1fr;
+    height: 100vh;
+    padding: var(--content-padding, 20px);
+    min-block-size: 668px;
+  }
   
-  bottom:  var(--content-padding, 20px);
-  left:  var(--content-padding, 20px);
-  border-bottom: 1px solid var(--accent-color, #ff0070);
-  border-left: 1px solid var(--accent-color, #ff0070);
-}
-
-.header-decorated-text {
-  position: absolute;
-  top: 20px;
-  right: 48px;;
-  color: var(--accent-color, #ff0070);
-  font-family: var(--main-font, Arial, sans-serif);
-  line-height: 139%;
-  text-transform: uppercase;
-}
-
-.header-decorated-text::after {
-  content: '';
-  position: absolute;
-  top: 8px;
-  right: -19px;  
-  display: block;
-  border-radius: 100%;
-  box-shadow: 0 0 4px 2px var(--accent-color, #ff0070);
-  background-color: var(--accent-color, #ff0070);
-  block-size: 9px;
-  inline-size: 9px;
-}
-
-.header__theme-menu {
-  justify-self: center;
-  max-block-size: 26px;
+  .corner-decore {
+    position: absolute;
+    width: 25px;
+    height: 25px;
   
-}
-
-.header__theme-menu-list {
-  display: flex;
-  gap: 10px;
-}
-
-.header__theme-menu-button {
-  box-sizing: border-box;
-  padding: 1.5px 13px;
-  color: var(--accent-color, red);
-  font-family: var(--main-font, Arial, sans-serif);
-}
-
-.header__theme-menu-button:hover {
-  outline: 1px solid currentColor;
-}
-
-.header__theme-menu-button:focus {
-  outline: none;
-}
-
-.header__theme-menu-button:focus-visible {
-  border-bottom: 1px currentColor solid;
-}
-
-.header__title {
-  margin-inline-start: -20px;
-  color: #db00ff;
-  font-family: var(--main-font, Arial, sans-serif);
-  font-weight: 700;
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  line-height: 83%;
-  text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
-}
-
-.header__text-block {
-  justify-self: end;
-  align-self: center;
-  color: #000028;
-  font-family: var(--main-font, Arial, sans-serif);
-  font-weight: 700;
-  line-height: 130%;
-  max-inline-size: 491px;
-  max-block-size: min-content;
-}
-
-.title-decore {
-  background-color: var(--accent-color, #ff0070);
-}
-
-.header__theme-menu-button_active {
-  outline: 1px solid var(--accent-color, #ff0070);
-  pointer-events: none;
-}
-
-/* Header End */
-
-/* Main */
-
-.page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  color: var(--main-text-color);
-  font-family: var(--main-font, Arial, sans-serif);
-  font-size: var(--main-font-size, 18px);
-  background-color: var(--background-color, #000028);
-  background-image: url(../images/cover-image-dark.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-  max-inline-size: 1024px;
-  margin: 0 auto;
-}
-
-.main-content {
-  display: flex;
-  flex-direction: column;
-  gap: 80px;
-  margin-block-start: 60px;
-  padding: 0 var(--content-padding);
-}
-
-.content-cards {
-  display: grid;
-  gap: 20px;
-  max-inline-size: 1024px;
-  /* 472px ??? */
-}
-
-.two-columns {
-  grid-template-columns: 32% 66%;
-}
-
-.three-columns {
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
-.three-columns-header {
-  max-inline-size: 315px;
-
-}
-
-.content-cards__container {
-  display: grid;
-  gap: 20px;
-}
-
-.heading {
-  color: var(--title-text-color);
-  font-family: var(--main-font, Arial, sans-serif);
-  font-weight: 700;
-  font-size: var(--main-font-size, 18px);
-  line-height: 130%;
-}
-
-.heading-accent-color {
-  color: var(--accent-color);
-}
-
-.heading-weight-regular {
-  font-weight: 400;
-}
-
-.content-card__text {
-  margin-block-start: 10px;
-  line-height: 130%;
-}
-
-.text-link {
-  display: inline-block;
-  text-shadow: 2px 2px 0 var(--accent-color);
-}
-
-.text-link:hover {
-  box-sizing: border-box;
-  border-bottom: 1px currentColor solid;
-  margin-bottom: -1px;
-  max-width: min-content;
-}
-
-.text-link:focus {
-  outline: none;
-}
-
-.text-link:focus-visible {
-  outline: 1px currentColor solid;
-}
-
-.gallery {
-  margin: 0 auto;
-  display: grid;
-  gap: 20px;
-}
-
-.gallery__container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, auto);
-  gap: 20px;
-}
-
-.grid-item img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.img1 {
-  grid-column: 1 / 3;
-  grid-row: 1;
-}
-
-.img2 {
-  grid-column: 3;
-  grid-row: 1 / span 2;
-}
-
-.img3 {
-  grid-column: 1;
-  grid-row: 2 / 4;
-}
-
-.img4 {
-  grid-column: 2;
-  grid-row: 2;
-}
-
-.img5 {
-  grid-column: 2 / 4;
-  grid-row: 3; 
-}
-
-/* End Main */
-
-
-.footer {
-  position: relative;
-  margin-block-start: 60px;
-  text-align: center;
-  padding: 319px 0;
-  color: #db00ff;
-  font-family: var(--main-font, Arial, sans-serif);
-  font-weight: 700;
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  line-height: 83%;
-  text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
-}
-
-/* Media */
-@media (max-width: 768px)
-{
-
+  }
+  
+  .corner-decore-right-up {
+    top: var(--content-padding, 20px);
+    right: var(--content-padding, 20px);
+    border-top: 1px solid var(--nav-menu-color);
+    border-right: 1px solid var(--nav-menu-color);
+  }
+  
+  .corner-decore-left-down {
+    
+    bottom:  var(--content-padding, 20px);
+    left:  var(--content-padding, 20px);
+    border-bottom: 1px solid var(--nav-menu-color);
+    border-left: 1px solid var(--nav-menu-color);
+  }
+  
+  .header-decorated-text {
+    position: absolute;
+    top: 20px;
+    right: 48px;
+    display: var(--display-visible);;
+    color: var(--accent-color, #ff0070);
+    font-family: var(--main-font, Arial, sans-serif);
+    line-height: 139%;
+    text-transform: uppercase;
+  }
+  
+  .header-decorated-text::after {
+    content: '';
+    position: absolute;
+    top: 8px;
+    right: -19px;  
+    display: block;
+    border-radius: 100%;
+    box-shadow: 0 0 4px 2px var(--accent-color, #ff0070);
+    background-color: var(--accent-color, #ff0070);
+    block-size: 9px;
+    inline-size: 9px;
+  }
+  
   .header__theme-menu {
+    justify-self: center;
+    max-block-size: 26px;
+    
+  }
+  
+  .header__theme-menu-list {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .header__theme-menu-button {
+    box-sizing: border-box;
+    padding: 1.5px 13px;
+    color: var(--nav-menu-color);
+    font-family: var(--main-font, Arial, sans-serif);
+  }
+  
+  .header__theme-menu-button_active {
+    
+    outline: 1px solid currentColor;
+    pointer-events: none;
+  }
+  
+  .header__theme-menu-button:hover {
+    outline: var(--nav-menu-hover-outline);
+    
+  }
+  
+  .header__theme-menu-button:focus {
+    outline: none;
+  }
+  
+  .header__theme-menu-button:focus-visible {
+    border-bottom: 1px currentColor solid;
+  }
+  
+  .header__title {
+    margin-inline-start: -20px;
+    color: var(--header-title-color);
+    font-family: var(--main-font, Arial, sans-serif);
+    font-weight: 700;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    line-height: 83%;
+    text-shadow: 4px 4px 0 #ff0070;
+  }
+  
+  .header__text-block {
     justify-self: end;
     align-self: center;
-    max-block-size: 96px;
-    block-size: 96px;
+    color: #000028;
+    font-family: var(--main-font, Arial, sans-serif);
+    font-weight: 700;
+    line-height: 130%;
+    max-inline-size: 491px;
+    max-block-size: min-content;
   }
-
-  .header__theme-menu-list {
+  
+  .title-decore {
+    background-color: var(--accent-color, #ff0070);
+  }
+  /* Header End */
+  
+  /* Main */
+  
+  .page {
+    margin: 0 auto;
+    /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+    color: var(--main-text-color);
+    font-family: var(--main-font, Arial, sans-serif);
+    font-size: var(--main-font-size, 18px);
+    background-color: #000028;
+    background-image: url(../images/cover-image-dark.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    max-inline-size: 1024px;
+  }
+  
+  .main-content {
+    display: flex;
     flex-direction: column;
+    gap: 80px;
+    margin-block-start: 60px;
+    padding: 0 var(--content-padding);
   }
-
-  .header__text-block {
-    max-inline-size: 364px;
-    min-block-size: 117px;
+  
+  .content-cards {
+    display: grid;
+    gap: 20px;
+    max-inline-size: 1024px;
+    grid-template-columns: var(--grid-columns);
   }
-
-  .three-columns {
-    grid-template-columns: 1fr;
+  
+  .content-cards:first-of-type {
+    --grid-columns: 32% 66%;
   }
-
-  .three-columns-header {
-    max-inline-size: 236px;
+  
+  .content-cards:nth-of-type(2)
+  {
+    grid-template-rows: auto auto;
   }
-
-  .two-columns .content-card__text {
-    max-inline-size: 472px;
+  
+  .content-cards:nth-of-type(2) .content-cards__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
-}
-
-@media (max-width: 565px) {
-  .main-content {
-    margin-block-start: 40px;
+  
+  .content-cards:nth-of-type(3)
+  {
+    --grid-columns: 32% 66%;
   }
-  .two-columns {
-    grid-template-columns: 1fr;
-  }
-
+  
   .content-cards__container {
-    max-inline-size: 100%;
+    display: grid;
+    gap: 20px;
   }
-
-  .footer {
-    padding: 463px 0;
+  
+  
+  .heading {
+    color: var(--title-text-color);
+    font-family: var(--main-font, Arial, sans-serif);
+    font-weight: 700;
+    font-size: var(--main-font-size, 18px);
+    line-height: 130%;
   }
-}
-
-@media (max-width: 375px)
-{
-  :root {
-    --content-padding: 10px;
+  
+  .heading-accent-color {
+    color: var(--title-accent-color);
   }
-
-  .header__title {
-    margin-inline-start: 0px;
-    font-size: 116px;
+  
+  .heading-inline-size {
+    max-inline-size: 315px;
   }
-
-  .header-decorated-text {
-    top: 10px;
-    right: 40px;;
+  
+  .heading-weight-regular {
+    font-weight: 400;
   }
-
-  .header-decorated-text::after {
-    top: 8px;
-    right: -20px;
+  
+  .content-card__text {
+    margin-block-start: 10px;
+    line-height: 130%;
   }
-
-  .header__text-block {
-    max-inline-size: 355px;
-    justify-self: flex-start;
+  
+  .text-link {
+    display: inline-block;
+    text-shadow: 2px 2px 0 var(--accent-color);
   }
-
-  .main-content {
-    gap: 50px;
+  
+  .text-link:hover {
+    box-sizing: border-box;
+    max-width: min-content;
+    margin-bottom: -1px;
+    border-bottom: 1px currentColor solid;
   }
-
-  .three-columns-header {
-    max-inline-size: 100%;
+  
+  .text-link:focus {
+    outline: none;
   }
-
+  
+  .text-link:focus-visible {
+    outline: 1px currentColor solid;
+  }
+  
   .gallery {
-    gap: 10px;
+    display: grid;
+    gap: 20px;
+    margin: 0 auto;
   }
   
   .gallery__container {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: min-content;
+    gap: 20px;
   }
   
   .grid-item img {
@@ -370,38 +241,239 @@
     object-fit: cover;
   }
   
-  .img1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+  .grid-item:first-of-type {
+    max-block-size: 260px ;
+    max-inline-size: 649px ;
+    grid-column: 1 / 3;
+    grid-row: 1;
   }
   
-  .img2 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
+  .grid-item:nth-of-type(2) {
+    max-block-size: 595px;
+    max-inline-size: 315px;
+    grid-column: 3;
+    grid-row: 1 / span 2;
   }
   
-  .img3 {
-    grid-column: 1 / 2;
-    grid-row: 3/ 4;
+  .grid-item:nth-of-type(3) {
+    max-block-size: 768px;
+    max-inline-size: 315px;
+    grid-column: 1;
+    grid-row: 2 / 4;
   }
   
-  .img4 {
-    grid-column: 1 / 2;
-    grid-row: 4 / 5;
+  .grid-item:nth-of-type(4) {
+    max-block-size: 315px;
+    max-inline-size: 315px;
+    grid-column: 2;
+    grid-row: 2;
   }
   
-  .img5 {
-    grid-column: 1 / 2;
-    grid-row: 5 / 6;
+  .grid-item:nth-of-type(5) {
+    max-block-size: 428px;
+    max-inline-size: 649px;
+    margin-block-start: 5px;
+    grid-column: 2 / 4;
+    grid-row: 3; 
   }
-
+  
+  /* End Main */
+  
+  
   .footer {
-    padding: 286px 0;
+    position: relative;
+    height: 100vh;
+    margin-block-start: 60px;
+    color: #db00ff;
+    font-family: var(--main-font, Arial, sans-serif);
+    font-weight: 700;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    line-height: 83%;
+    text-align: center;
+    text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
+    min-block-size: 668px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-
-
-
-}
+  
+  .footer .header__title {
+    margin-inline-start: 0px;
+    text-shadow: 2px 2px 0 #ff0070;
+  }
+  
+  /* Media */
+  @media (max-width: 768px)
+  {
+  
+    .header__theme-menu {
+      justify-self: end;
+      align-self: center;
+      max-block-size: 96px;
+      block-size: 96px;
+    }
+  
+    .header__theme-menu-list {
+      flex-direction: column;
+    }
+  
+    .header__text-block {
+      max-inline-size: 364px;
+    }
+  
+    .content-cards:nth-of-type(2) {
+      gap: 20px;
+    }
+  
+    .content-cards:nth-of-type(2) .content-cards__container {
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+  
+    .content-cards:nth-of-type(2) .content-card {
+      max-inline-size: 100%;
+  
+    }
+  
+    .heading-inline-size {
+      max-inline-size: 236px;
+    }
+  
+    .content-card,
+    .content-cards:nth-of-type(3) .heading {
+      max-inline-size: 472px;
+    }
+  
+    .grid-item:first-of-type {
+      max-inline-size: 479px ;
+      max-block-size: 192px ;
+    }
+    
+    .grid-item:nth-of-type(2) {
+      max-inline-size: 229px ;
+      max-block-size: 441px ;
+    }
+    
+    .grid-item:nth-of-type(3) {
+      max-inline-size: 229px ;
+      max-block-size: 568px ;
+    }
+    
+    .grid-item:nth-of-type(4) {
+      max-inline-size: 230px ;
+      max-block-size: 230px ;
+    }
+    
+    .grid-item:nth-of-type(5) {
+      max-inline-size: 479px ;
+      max-block-size: 318px ;
+      margin-block-start: 0px;
+    }
+    
+  
+  }
+  
+  @media (max-width: 565px) {
+    .main-content {
+      margin-block-start: 40px;
+    }
+  
+    .content-cards:nth-of-type(3) .heading,
+    .content-cards__container,
+    .content-cards,
+    .content-card {
+      max-inline-size: 100%;
+    }
+  
+    .content-cards {
+      grid-template-columns: 1fr;
+    }
+  
+  }
+  
+  @media (max-width: 375px)
+  {
+    :root {
+      --content-padding: 10px;
+    }
+  
+    .header__title {
+      margin-inline-start: 0px;
+    }
+  
+    .header-decorated-text {
+      top: 10px;
+      right: 40px;;
+    }
+  
+    .header-decorated-text::after {
+      top: 8px;
+      right: -20px;
+    }
+  
+    .header__text-block {
+      justify-self: flex-start;
+      max-inline-size: 355px;
+    }
+  
+    .main-content {
+      gap: 50px;
+    }
+  
+    .heading-inline-size {
+      max-inline-size: 100%;
+    }
+  
+    .gallery,
+    .gallery__container {
+      gap: 10px;
+    }
+  
+    .gallery__container {
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+    }
+  
+    .grid-item:first-of-type {
+      max-inline-size: 100%;
+      max-block-size: 142px;
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+    }
+    
+    .grid-item:nth-of-type(2) {
+      max-inline-size: 100%;
+      max-block-size: 355px;
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+    }
+    
+    .grid-item:nth-of-type(3) {
+      max-inline-size: 100%;
+      max-block-size: 237px;
+      grid-column: 1 / 2;
+      grid-row: 3/ 4;
+    }
+    
+    .grid-item:nth-of-type(4) {
+      max-inline-size: 100%;
+      max-block-size: 355px;
+      grid-column: 1 / 2;
+      grid-row: 4 / 5;
+    }
+    
+    .grid-item:nth-of-type(5) {
+      max-inline-size: 100%;
+      max-block-size: 237px;
+      grid-column: 1 / 2;
+      grid-row: 5 / 6; 
+    }
+  
+    .footer {
+      margin-block-start: 40px;
+    }
+  
+  }
 
 
 
