--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,10 +4,18 @@
 */
 :root {
   --accent-color: #ff0070;
-  --main-text-color: #F1B2CE;
+  --nav-menu-color: #ff0070;
+  --nav-menu-hover-outline: 1px solid rgba(255, 0, 112, 0.4);
+  --header-title-color: #DB00FF;
   --title-text-color: #000028;
+  --title-accent-color: #ff0070;
+  --main-text-color: #F1B2CE;
   --main-font: 'IBM Plex Mono', Arial sans-serif;
   --main-font-size: 18px;
-  --background-color: #000028;
   --content-padding: 20px;
+  --display-visible: inline;
+  
 }
+
+
+/* шапка */
