--- a/styles/light.css
+++ b/styles/light.css
@@ -4,6 +4,22 @@
   переключая тему
 */
 
+@media (prefers-color-scheme: light) {
+  .page {
+    background-image: url(../images/cover-image-light.png);
+    background-color: #FFF1F7;
+    --accent-color: #FF8DCB;
+  --nav-menu-color: #353430;
+  --nav-menu-hover-outline: 1px solid rgba(50, 49, 45, 0.4);
+  --header-title-color:#FF8DCB;
+  --title-text-color: #353430;
+  --title-accent-color: #353430;
+  --main-text-color: #353430;
+  --display-visible: none;
+  }
+}
+
+
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
@@ -21,6 +37,10 @@
   --main-text-color: #353430;
   --display-visible: none;
 }
+
+
+
+
 
 
 
