--- a/styles/dark.css
+++ b/styles/dark.css
@@ -15,6 +15,7 @@
     --title-text-color: #000028;
     --title-accent-color: #ff0070;
     --main-text-color: #F1B2CE;
+    --display-visible: inline;
   }
 }
 
@@ -32,6 +33,7 @@
     --main-text-color: #F1B2CE;
     background-color: #000028;
     background-image: url(../images/cover-image-dark.png);
+    --display-visible: inline;
     
   
 }
